--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.todotest">
+    package="com.example.todotest"
+    android:versionName="TODO"
+    android:versionCode="TODO">
 
     <application
         android:allowBackup="true"
@@ -12,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoTest"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:ignore="RtlEnabled">
         <activity
             android:name=".MainActivity"
             android:exported="true">
